--- a/sgdc/market/asset.html
+++ b/sgdc/market/asset.html
@@ -13,8 +13,6 @@
 }
 *{box-sizing:border-box}
 body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(1200px 600px at 10% -10%,#14183d 0,#0E1023 60%);color:var(--text)}
-
-/* Topbar */
 .nav{max-width:1200px;margin:0 auto;padding:12px 16px;display:flex;align-items:center;gap:10px}
 .back{border:1px solid var(--border);background:#ffffff14;padding:8px 12px;border-radius:12px;text-decoration:none;color:var(--text);font-weight:600;transition:.2s}
 .back:hover{background:#ffffff28}
@@ -22,8 +20,6 @@ body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(
 .balance{font-weight:800;color:var(--good)}
 .help{cursor:pointer;font-weight:800;border:1px solid var(--border);background:#ffffff14;padding:8px 12px;border-radius:12px;transition:.2s}
 .help:hover{background:#ffffff28}
-
-/* Layout & cards */
 .container{max-width:1200px;margin:0 auto;padding:18px 16px 60px}
 .head{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
 .title{font-weight:800;font-size:22px}
@@ -32,24 +28,17 @@ body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(
 .pill.up{color:var(--good);animation:pulseUp 1s} .pill.down{color:var(--bad);animation:pulseDown 1s}
 @keyframes pulseUp{0%{background:#4BD37B44}100%{background:#ffffff1a}}
 @keyframes pulseDown{0%{background:#FF6B6B44}100%{background:#ffffff1a}}
-
 .stats{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
 .chip{border:1px solid #ffffff22;background:#ffffff10;padding:8px 12px;border-radius:12px}
 .highlight{outline:2px solid var(--accent);box-shadow:0 0 0 8px #8a7cff22}
-
-/* Grid */
 .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:16px;margin-top:16px}
 @media (max-width:900px){ .grid{grid-template-columns:1fr } }
 .card{background:linear-gradient(180deg,var(--card),#101432);border:1px solid var(--border);border-radius:18px;padding:14px;box-shadow:var(--shadow)}
-
-/* Chart */
 canvas{width:100%;height:280px;display:block}
 .tf{display:flex;gap:8px;margin-top:12px;flex-wrap:wrap}
 .btn{padding:8px 12px;border-radius:12px;border:1px solid var(--border);background:#ffffff14;color:var(--text);cursor:pointer;font-weight:700;transition:.2s}
 .btn:hover{transform:translateY(-1px)}
 .btn.active{background:#ffffff26}
-
-/* Forms */
 .field{display:flex;flex-direction:column;gap:6px;margin-bottom:12px}
 input[type=number]{background:#0f1330;color:var(--text);border:1px solid var(--border);border-radius:12px;padding:10px}
 .actions{display:flex;gap:8px;flex-wrap:wrap}
@@ -57,8 +46,6 @@ input[type=number]{background:#0f1330;color:var(--text);border:1px solid var(--b
 .sell{background:#ffd66b;border:none;color:#0d0b06}
 .swap{background:#9c7cff;border:none}
 .small{font-size:12px;color:var(--muted)}
-
-/* Onboarding */
 #onboard{position:fixed;inset:0;background:rgba(0,0,0,.82);display:flex;align-items:center;justify-content:center;z-index:9999}
 .on-card{background:#15193A;border-radius:20px;padding:24px;max-width:520px;width:90%;color:var(--text);box-shadow:var(--shadow);text-align:center;animation:fadeIn .35s}
 .on-card h2{margin:0 0 12px;font-size:22px}
@@ -151,10 +138,10 @@ input[type=number]{background:#0f1330;color:var(--text);border:1px solid var(--b
 
 <script>
 /* =========================
-   SGDC Asset — v2 (decimals)
+   SGDC Asset — v2.1 (offline growth)
    ========================= */
 
-/* Bits (sgdcBits) */
+/* Bits (decimals) */
 const STORAGE_KEY='sgdc.bits';
 let balance=parseFloat(localStorage.getItem(STORAGE_KEY)??'100');
 if(!Number.isFinite(balance)) balance=100;
@@ -164,22 +151,22 @@ function setBits(v){ balance=Math.max(0, Number(v)||0); localStorage.setItem(STO
 window.sgdcBits={ get:()=>balance, set:setBits, add:(a)=>setBits(balance+Number(a||0)), reset:()=>{localStorage.removeItem(STORAGE_KEY); setBits(100);} };
 renderBits();
 
-/* Keys & helpers */
-const assetsKey='market.assets', portfolioKey='portfolio', histPrefix='market.history.', tradesPrefix='market.trades.';
+/* Shared market keys */
+const assetsKey='market.assets', portfolioKey='portfolio', histPrefix='market.history.', tradesPrefix='market.trades.', lastKey='sgdc.market.last';
 const E=id=>document.getElementById(id);
 const fmt=n=>'₿'+Number(n).toFixed(2);
 const now=()=>Date.now();
 
-/* Meta (10 coins, same as index) */
+/* Meta */
 const Meta={
   SNK:{name:"Snacko",icon:"🍪",vol:.006,seed:95},
   FRIK:{name:"Frikandelium",icon:"🌭",vol:.010,seed:42},
   COKE:{name:"ColaCap",icon:"🥤",vol:.009,seed:60},
   BBIT:{name:"Bitterbit",icon:"🟤",vol:.007,seed:33},
-  HWK:{name:"HwCoin",icon:"📚",vol:.004,seed:21},
-  TCH:{name:"TeachToken",icon:"👩‍🏫",vol:.008,seed:78},
-  WIFI:{name:"LaggyFi",icon:"📶",vol:.012,seed:54},
-  CHAIR:{name:"ChairChain",icon:"🪑",vol:.005,seed:18},
+  HWK:{name:"HwCoin",icon:"📚",vol:.004,seed:25},
+  TCH:{name:"TeachToken",icon:"👩‍🏫",vol:.008,seed:70},
+  WIFI:{name:"LaggyFi",icon:"📶",vol:.012,seed:15},
+  CHAIR:{name:"ChairChain",icon:"🪑",vol:.005,seed:8},
   CHZB:{name:"CheezeBread",icon:"🧀",vol:.003,seed:12},
   PPLX:{name:"PartyPlex",icon:"🎉",vol:.015,seed:140},
 };
@@ -188,26 +175,29 @@ const params=new URLSearchParams(location.search);
 const sym=params.get('symbol')||'SNK';
 function Hhist(s){return histPrefix+s} function Htr(s){return tradesPrefix+s}
 
-/* Load / seed assets & history (shared across market pages) */
-let Assets=JSON.parse(localStorage.getItem(assetsKey) || 'null');
-if(!Assets){
-  Assets={}; Symbols.forEach(k=>{
+/* Seed assets & history (shared model) */
+function ensureSeed(){
+  let A=JSON.parse(localStorage.getItem(assetsKey)||'null');
+  if(A) return A;
+  A={}; Symbols.forEach(k=>{
     const m=Meta[k], p0=m.seed, yClose=+(p0*(1+(Math.random()*2-1)*0.02)).toFixed(2);
-    Assets[k]={price:p0,anchor:p0,vol:m.vol,yClose};
-    // seed history
-    const N=2000, arr=[]; let p=p0;
-    for(let i=0;i<N;i++){ const r=(Math.random()*2-1)*(m.vol*0.9), th=0.02;
+    A[k]={price:p0,vol:m.vol,yClose};
+    const N=720; const arr=[]; let p=p0;
+    for(let i=0;i<N;i++){
+      const r=(Math.random()*2-1)*(m.vol*0.9), th=0.02;
       p=p*(1+r)+th*(p0-p);
-      const h=i%720; if(h>330&&h<390) p*=1.0004; if(h>650&&h<720) p*=0.9996;
       p=Math.max(1,+p.toFixed(2)); arr.push(p);
     }
     localStorage.setItem(Hhist(k), JSON.stringify(arr));
     localStorage.setItem(Htr(k), JSON.stringify([]));
   });
-  localStorage.setItem(assetsKey, JSON.stringify(Assets));
+  localStorage.setItem(assetsKey, JSON.stringify(A));
+  localStorage.setItem(lastKey, String(now()));
+  return A;
 }
+let Assets=ensureSeed();
 
-/* Portfolio with DECIMALS */
+/* Portfolio (decimals) */
 function portfolio(){ return JSON.parse(localStorage.getItem(portfolioKey)||'{}'); }
 function setPortfolio(p){ localStorage.setItem(portfolioKey, JSON.stringify(p)); }
 const Fee=0.005;
@@ -218,7 +208,42 @@ function setHistory(s,arr){ localStorage.setItem(Hhist(s), JSON.stringify(arr));
 function trades(s){ return JSON.parse(localStorage.getItem(Htr(s))||'[]'); }
 function addTrade(s,t){ const arr=trades(s); arr.push(t); localStorage.setItem(Htr(s), JSON.stringify(arr)); }
 
-/* UI header */
+/* Offline catch-up engine */
+const TICK_MS=2000;
+function stepOnce(A){
+  Symbols.forEach(k=>{
+    const a=A[k];
+    let p=a.price*(1+(Math.random()*2-1)*a.vol*0.3);
+    p = Math.max(1, +p.toFixed(2));
+    a.price = p;
+    const hk=Hhist(k);
+    const hist = JSON.parse(localStorage.getItem(hk)||'[]');
+    hist.push(p); if(hist.length>3000) hist.shift();
+    localStorage.setItem(hk, JSON.stringify(hist));
+  });
+  localStorage.setItem(assetsKey, JSON.stringify(A));
+}
+function catchUp(){
+  const last = parseInt(localStorage.getItem(lastKey)||String(now()),10);
+  const elapsed = Math.max(0, now()-last);
+  let steps = Math.floor(elapsed / TICK_MS);
+  if(steps<=0) return;
+  // Hard cap + batching for speed
+  const MAX_STEPS = 5000;
+  steps = Math.min(steps, MAX_STEPS);
+  let A=JSON.parse(localStorage.getItem(assetsKey));
+  for(let i=0;i<steps;i++) stepOnce(A);
+  localStorage.setItem(lastKey, String(now()));
+  Assets=JSON.parse(localStorage.getItem(assetsKey));
+}
+/* Keep last timestamp fresh */
+window.addEventListener('visibilitychange', ()=>{
+  if(document.visibilityState==='visible'){ catchUp(); renderAll(); }
+  localStorage.setItem(lastKey, String(now()));
+});
+window.addEventListener('beforeunload', ()=>localStorage.setItem(lastKey, String(now())));
+
+/* UI header/stats */
 function renderHeader(){
   const a=Assets[sym];
   E('icon').textContent = (Meta[sym]?.icon || '📦');
@@ -228,8 +253,6 @@ function renderHeader(){
   const pct=((a.price - a.yClose)/a.yClose)*100;
   const dd=E('dayDelta'); dd.textContent=(pct>=0?'+':'')+pct.toFixed(2)+'%'; dd.className='pill '+(pct>=0?'up':'down');
 }
-
-/* Stats (invested / value / P&L) */
 function renderStats(){
   const pos=portfolio()[sym] || {qty:0,avg:0};
   const invested = pos.qty * pos.avg;
@@ -244,21 +267,18 @@ function renderStats(){
   `;
 }
 
-/* BUY / SELL (decimals) */
+/* Trade ops */
 function buy(sym, qty){
-  qty = Math.max(0.0001, Number(qty)||0); // decimals ok
+  qty = Math.max(0.0001, Number(qty)||0);
   const a=Assets[sym];
   const cost = qty * a.price * (1+Fee);
   if(sgdcBits.get() < cost) return {ok:false, msg:'Onvoldoende Bits.'};
-  // bits down
   sgdcBits.set( + (sgdcBits.get() - cost).toFixed(2) );
-  // position
   const pf=portfolio(); const pos=pf[sym] || {qty:0,avg:0};
   const newQty = pos.qty + qty;
   const newAvg = (pos.qty*pos.avg + qty*a.price) / newQty;
   pf[sym] = { qty:+newQty.toFixed(6), avg:+newAvg.toFixed(4) };
   setPortfolio(pf);
-  // trade marker
   const idx = history(sym).length-1;
   addTrade(sym,{t:now(),type:'buy',qty:+qty.toFixed(6),price:a.price,idx});
   return {ok:true,msg:`Kocht ${qty.toFixed(4)} ${sym} @ ${fmt(a.price)} (incl. ${(Fee*100).toFixed(2)}% fee)`};
@@ -281,7 +301,6 @@ function sell(sym, qty){
 function swap(fromSym,toSym,qty){
   if(fromSym===toSym) return {ok:false,msg:'Zelfde asset.'};
   const s1=sell(fromSym,qty); if(!s1.ok) return s1;
-  // koop zoveel mogelijk van target met huidige Bits
   const a=Assets[toSym];
   const buyableQty = (sgdcBits.get() / (a.price*(1+Fee)));
   if(buyableQty<=0) return {ok:true,msg:`Verkocht ${qty} ${fromSym}. Niet genoeg Bits voor ${toSym}.`};
@@ -294,21 +313,15 @@ const c=E('chart'); const ctx=c.getContext('2d');
 function drawChart(tf='1h'){
   const hist = history(sym);
   if(!hist.length){ ctx.clearRect(0,0,c.width,c.height); return; }
-
   const map = { '1h':120, '1d':720, '1w':720*5, '1m':720*20, 'all':hist.length };
   const take = Math.min(map[tf]||hist.length, hist.length);
   const start = hist.length - take;
   const data = hist.slice(start);
-
   const min = Math.min(...data), max = Math.max(...data);
   const pad = 8, W=c.width, H=c.height;
   ctx.clearRect(0,0,W,H);
-
-  // midline
   ctx.globalAlpha=.12; ctx.strokeStyle='#fff';
   ctx.beginPath(); ctx.moveTo(pad, H/2); ctx.lineTo(W-pad, H/2); ctx.stroke(); ctx.globalAlpha=1;
-
-  // price line
   ctx.beginPath();
   data.forEach((v,i)=>{
     const x = pad + (i/(data.length-1))*(W-2*pad);
@@ -316,81 +329,62 @@ function drawChart(tf='1h'){
     if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
   });
   ctx.lineWidth = 2; ctx.strokeStyle = '#8a7cff'; ctx.stroke();
-
-  // trade markers
   const ts = trades(sym);
   ts.forEach(tr=>{
     const li = tr.idx - start; if(li<0 || li>=data.length) return;
     const x = pad + (li/(data.length-1))*(W-2*pad);
     const y = H - pad - ((tr.price-min)/(max-min||1))*(H-2*pad);
-    // price line
     ctx.globalAlpha=.22; ctx.strokeStyle = tr.type==='buy'?'#37d87c':'#ff6b6b';
     ctx.beginPath(); ctx.moveTo(pad,y); ctx.lineTo(W-pad,y); ctx.stroke();
-    // time line
     ctx.globalAlpha=.22; ctx.beginPath(); ctx.moveTo(x,pad); ctx.lineTo(x,H-pad); ctx.stroke(); ctx.globalAlpha=1;
-    // marker ▲/▼
     ctx.beginPath();
     if(tr.type==='buy'){ ctx.fillStyle='#37d87c'; ctx.moveTo(x,y-6); ctx.lineTo(x-6,y+6); ctx.lineTo(x+6,y+6); ctx.closePath(); ctx.fill(); }
     else{ ctx.fillStyle='#ff6b6b'; ctx.moveTo(x,y+6); ctx.lineTo(x-6,y-6); ctx.lineTo(x+6,y-6); ctx.closePath(); ctx.fill(); }
   });
 }
 
-/* Tick (slow) — houdt grafiek in leven ook als alleen asset open is */
-function selfTick(){
-  // lichte drift voor ALLE coins zodat history blijft lopen
-  const A = JSON.parse(localStorage.getItem(assetsKey));
-  Symbols.forEach(k=>{
-    const a=A[k];
-    let p=a.price*(1+(Math.random()*2-1)*a.vol*0.3);
-    p = Math.max(1, +p.toFixed(2));
-    a.price = p;
-    // push history
-    const hk=Hhist(k);
-    const hist = JSON.parse(localStorage.getItem(hk)||'[]');
-    hist.push(p); if(hist.length>3000) hist.shift();
-    localStorage.setItem(hk, JSON.stringify(hist));
-  });
-  localStorage.setItem(assetsKey, JSON.stringify(A));
+/* Live tick (foreground) */
+function liveTick(){
+  // one step
+  let A=JSON.parse(localStorage.getItem(assetsKey));
+  stepOnce(A);
   Assets=A;
+  localStorage.setItem(lastKey, String(now()));
 }
 
-/* UI bindings */
+/* UI events */
 document.querySelectorAll('.tf .btn').forEach(b=>{
   b.onclick=()=>{ document.querySelectorAll('.tf .btn').forEach(x=>x.classList.toggle('active',x===b)); drawChart(b.dataset.tf); };
 });
-
 E('buyBits').addEventListener('input', ()=>{
   const amt = Math.max(0, Number(E('buyBits').value)||0);
   const qty = amt / (Assets[sym].price*(1+Fee));
   E('buyQtyPreview').textContent = (qty>0 && isFinite(qty)) ? qty.toFixed(4) : '0.00';
 });
-
 E('btnBuy').onclick=()=>{
   const amt = Math.max(0.01, Number(E('buyBits').value)||0);
   const qty = amt / (Assets[sym].price*(1+Fee));
   if(qty<=0){ alert('Bedrag te laag.'); return; }
   const res = buy(sym, qty);
   if(!res.ok) alert(res.msg);
-  renderBits(); renderHeader(); renderStats(); drawChart(document.querySelector('.tf .btn.active')?.dataset.tf || '1h');
+  renderAll();
 };
-
 E('btnSell').onclick=()=>{
   const qty = Math.max(0.01, Number(E('sellQty').value)||0);
   const res = sell(sym, qty);
   if(!res.ok) alert(res.msg);
-  renderBits(); renderHeader(); renderStats(); drawChart(document.querySelector('.tf .btn.active')?.dataset.tf || '1h');
+  renderAll();
 };
-
 E('btnSwap').onclick=()=>{
   const target = prompt('Swap naar symbol (SNK, FRIK, COKE, ...):','SNK');
   if(!target || !Assets[target]){ alert('Onbekend target.'); return; }
   const qty = Math.max(0.01, Number(prompt('Aantal te swappen (decimaal toegestaan):','0.5'))||0);
   const res = swap(sym, target, qty);
   alert(res.msg);
-  renderBits(); renderHeader(); renderStats(); drawChart(document.querySelector('.tf .btn.active')?.dataset.tf || '1h');
+  renderAll();
 };
 
-/* Onboarding + highlights */
+/* Onboarding */
 const steps=[
   {t:'Welkom bij Asset', x:'Hier zie je de koers, jouw positie en een live grafiek.' , h:'#headBlock'},
   {t:'Grafiek', x:'De grafiek beweegt live mee. ▲/▼ geven jouw aankopen/verkopen aan.', h:'#chartWrap'},
@@ -417,18 +411,24 @@ onNext.onclick = ()=>{
 E('helpBtn').onclick = ()=>{ onboard.style.display='flex'; showStep(0); };
 if(!localStorage.getItem('sgdc.asset.onboarded')){ onboard.style.display='flex'; showStep(0); }
 
+/* Render helper */
+function renderAll(){
+  renderBits(); renderHeader(); renderStats();
+  drawChart(document.querySelector('.tf .btn.active')?.dataset.tf || '1h');
+}
+
 /* Boot */
 function boot(){
-  renderHeader(); renderStats();
+  catchUp();                 // <<< offline fast-forward
+  renderAll();
   E('feeBuy').textContent = (Fee*100).toFixed(2)+'%';
-  // init preview
   E('buyBits').dispatchEvent(new Event('input'));
-  // live loops
-  setInterval(selfTick, 2000);         // prijzen / history
-  setInterval(()=>{                    // UI refresh + subtle change pulse
-    renderBits(); renderHeader(); renderStats();
-    drawChart(document.querySelector('.tf .btn.active')?.dataset.tf || '1h');
-  }, 1500);
+  setInterval(()=>{        // foreground live
+    if(document.visibilityState==='visible'){
+      liveTick();
+      renderAll();
+    }
+  }, TICK_MS);
 }
 boot();
 </script>
