--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -139,7 +139,7 @@
         <div class="g-body"><strong>Snake</strong><span class="pill">Nu spelen</span></div>
       </a>
 
-      <a class="game-btn" href="mines/" role="button" aria-label="Speel Mines">
+      <a class="game-btn" href="mines/" role="button" aria-label="Speel Diamanten roof">
         <div class="g-thumb" style="background:linear-gradient(160deg,#ffe36d,#ff9f4d)">Mines</div>
         <div class="g-body"><strong>Mines</strong><span class="pill">Nu spelen</span></div>
       </a>
@@ -151,24 +151,24 @@
 
       <!-- ✅ Crash unlocked -->
       <a class="game-btn" href="crash/index.html" role="button" aria-label="Speel Crash">
-        <div class="g-thumb" style="background:linear-gradient(160deg,#4ad8d0,#7b6dff)">Crash</div>
-        <div class="g-body"><strong>Crash</strong><span class="pill">Speel nu</span></div>
+        <div class="g-thumb" style="background:linear-gradient(160deg,#4ad8d0,#7b6dff)">Minecraft</div>
+        <div class="g-body"><strong>Minecraft</strong><span class="pill">NIEUW!! Speel nu</span></div>
       </a>
 
       <!-- ✅ Stock Market unlocked -->
-      <a class="game-btn" href="market/" role="button" aria-label="Open Stock Market">
-        <div class="g-thumb" style="background:linear-gradient(160deg,#ffe36d,#ff9f4d)">Stock Market</div>
-        <div class="g-body"><strong>Stock Market</strong><span class="pill">Nu open</span></div>
+      <a class="game-btn" href="market/" role="button" aria-label="Open Market simulator">
+        <div class="g-thumb" style="background:linear-gradient(160deg,#ffe36d,#ff9f4d)">Market simulator </div>
+        <div class="g-body"><strong>Market simulator </strong><span class="pill">Nu open</span></div>
       </a>
 
       <a class="game-btn soon" href="blackjack/" role="button" aria-label="Speel Blackjack">
         <div class="g-thumb" style="background:linear-gradient(160deg,#ff5386,#ff8a3d)">Blackjack</div>
-        <div class="g-body"><strong>Blackjack</strong><span class="pill">Nu spelen</span></div>
+        <div class="g-body"><strong>comming soon!!</strong><span class="pill">komt binnenkort</span></div>
       </a>
 
       <a class="game-btn soon" href="#" role="button" aria-disabled="true">
         <div class="g-thumb" style="background:linear-gradient(160deg,#7b6dff,#f453a1)">Roulette</div>
-        <div class="g-body"><strong>Roulette</strong><span class="pill">Komt binnenkort</span></div>
+        <div class="g-body"><strong>comming soon!!</strong><span class="pill">Komt binnenkort</span></div>
       </a>
     </section>
   </main>
@@ -181,7 +181,7 @@
       <h2 id="streakTitle">Dagelijkse Streak</h2>
       <p class="streak-sub">Vandaag is dag <strong id="streakDays">1</strong> van je streak!</p>
       <div class="streak-reward">
-        <div class="reward-amount">+<span id="streakReward">10</span> Bits</div>
+        <div class="reward-amount">+<span id="streakReward">10</span> coins</div>
         <p class="reward-note" id="streakNote"></p>
       </div>
       <div id="milestoneBanner" style="display:none;margin:8px 0 0;font-weight:800">🏆 Mijlpaal!</div>
