--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
     const alertBox = document.querySelector('#alert');
 
     const routes = {
-      "1": "Https://ctf.lucasmangroelal.nl",
-      "2": "https://paprika-verhalen.lucasmangroelal.nl"
+      "1": "Https://lucasmangroelal.nl/portfolio",
+      "2": "Https://ctf.lucasmangroelal.nl",
+      "3": "https://paprika-verhalen.lucasmangroelal.nl"
     };
 
     const startupMessages = [
@@ -94,8 +95,9 @@
       "Loading config...",
       "Ready.",
       "Voer het nummer in van je keuze:",
-      "[1] Speel mijn Mini CTF",
-      "[2] Bekijk het nieuwste Paprika Nieuws",
+      "[1] bekijk mijn portfolio",
+      "[2] Speel mijn Mini CTF",
+      "[3] Bekijk het nieuwste Paprika Nieuws",
     ];
 
     let currentText = "";
