Update fallback link to new site URL

--- a/ics/index.html
+++ b/ics/index.html
@@ -51,7 +51,7 @@
     <p>De site kan niet in een embed geladen worden.</p>
     <p>
       Klik hier om hem te openen:  
-      <a href="https://lucas-creative-canvas.lovable.app" style="color:#3b82f6;">Open site</a>
+      <a href="https://lucasics.lovable.app" style="color:#3b82f6;">Open site</a>
     </p>
   </div>
 
