--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       "1": "Https://lucasmangroelal.nl/portfolio",
       "2": "Https://ctf.lucasmangroelal.nl",
       "3": "https://paprika-verhalen.lucasmangroelal.nl",
+      "sgdc": "https://lucasmangroelal.nl/sgdc",
       "4": "https://lucasmangroelal.nl/CV%20Lucas%20Mangroelal--3.pdf"
       
     };
