Update iframe source to new URL

--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -42,7 +42,7 @@
 <body>
 
   <iframe
-    src="https://sgdclive.lovable.app"
+    src="https://sgdclive1.lovable.app"
     id="embedFrame"
   ></iframe>
 
@@ -51,7 +51,7 @@
     <p>De site kan niet in een embed geladen worden.</p>
     <p>
       Klik hier om hem te openen:  
-      <a href="https://sgdclive.lovable.app" style="color:#3b82f6;">Open site</a>
+      <a href="https://sgdclive1.lovable.app" style="color:#3b82f6;">Open site</a>
     </p>
   </div>
 
