Update iframe and fallback link URLs

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,7 +42,7 @@
 <body>
 
   <iframe
-    src="https://lucas-creative-canvas.lovable.app"
+    src="https://lucasportfoli.lovable.app"
     id="embedFrame"
   ></iframe>
 
@@ -51,7 +51,7 @@
     <p>De site kan niet in een embed geladen worden.</p>
     <p>
       Klik hier om hem te openen:  
-      <a href="https://lucas-creative-canvas.lovable.app" style="color:#3b82f6;">Open site</a>
+      <a href="https://lucasmangroelal.nl" style="color:#3b82f6;">Open site</a>
     </p>
   </div>
 
