--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lucas Terminal</title>
-  <style>
-    :root {
-      --green: #66ff66;
-    }
 
-    * {
-      box-sizing: border-box;
-    }
+  <style>
+    :root { --green: #66ff66; }
+
+    * { box-sizing: border-box; }
 
     body {
       background-color: #000;
@@ -29,18 +26,22 @@
     #terminal-history {
       list-style: none;
       padding-left: 0;
-      margin-bottom: 1rem;
+      margin: 0;
+      max-height: calc(100vh - 6.25rem);
+      overflow-y: auto;
     }
 
     #terminal-input {
       display: flex;
       align-items: center;
+      gap: 0.25rem;
+      margin-top: 1rem;
     }
 
     #terminal-text {
       flex: 1;
       white-space: pre-wrap;
-      word-wrap: break-word;
+      min-height: 1.5rem;
     }
 
     #caret {
@@ -50,112 +51,167 @@
       animation: blink 1s steps(5, start) infinite;
     }
 
-    @keyframes blink {
-      to {
-        visibility: hidden;
-      }
-    }
+    @keyframes blink { to { visibility: hidden; } }
 
     #alert {
       position: fixed;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      font-size: 4rem;
+      font-size: 3rem;
       display: none;
       animation: blink 1s steps(5, start) infinite;
     }
+    #alert.active { display: block; }
 
-    #alert.active {
-      display: block;
+    #mobile-capture {
+      position: fixed;
+      left: -9999px;
+      opacity: 0;
+    }
+
+    .ascii {
+      white-space: pre;
+      font-size: clamp(8px, 1.6vw, 14px);
+      line-height: 1.1;
     }
   </style>
 </head>
-<body>
 
+<body>
   <ul id="terminal-history"></ul>
+
   <div id="terminal-input">
-    <span>&gt; </span><span id="terminal-text"></span><span id="caret"></span>
+    <span>&gt; </span>
+    <span id="terminal-text"></span>
+    <span id="caret"></span>
   </div>
+
   <div id="alert">ABORT...</div>
+  <input id="mobile-capture" />
 
   <script>
-    const historyEl = document.querySelector('#terminal-history');
-    const terminalText = document.querySelector('#terminal-text');
-    const alertBox = document.querySelector('#alert');
+    const historyEl = document.getElementById("terminal-history");
+    const terminalText = document.getElementById("terminal-text");
+    const alertBox = document.getElementById("alert");
+    const mobileCapture = document.getElementById("mobile-capture");
+
+    const linkedinUrl = "https://nl.linkedin.com/in/lucas-mangroelal-4b458b348";
 
     const routes = {
-      "1": "Https://lucasmangroelal.nl/portfolio",
-      "2": "Https://ctf.lucasmangroelal.nl",
-      "3": "https://paprika-verhalen.lucasmangroelal.nl",
-      "sgdc": "https://lucasmangroelal.nl/sgdc",
-      "4": "https://lucasmangroelal.nl/CV%20Lucas%20Mangroelal--3.pdf"
-      
+      "1": "https://lucasmangroelal.nl/portfolio",
+      "sgdc": "https://lucasmangroelal.nl/sgdc"
     };
 
-    const startupMessages = [
-      "Booting system...",
-      "Loading config...",
-      "Ready.",
-      "Voer het nummer in van je keuze:",
-      "[1] Bekijk mijn portfolio",
-      "[2] Speel mijn Mini CTF",
-      "[3] Bekijk het nieuwste Paprika Nieuws",
-      "[4] Bekijk mijn CV"
-    ];
-
+    let pendingAction = null;
     let currentText = "";
 
-    function delayMsg(msg, delay) {
-      setTimeout(() => {
-        const li = document.createElement("li");
-        li.textContent = msg;
-        historyEl.appendChild(li);
-        scrollToBottom();
-      }, delay);
+    function addLine(text) {
+      const li = document.createElement("li");
+      li.textContent = text;
+      historyEl.appendChild(li);
+      historyEl.scrollTop = historyEl.scrollHeight;
     }
 
-    function scrollToBottom() {
-      window.scrollTo(0, document.body.scrollHeight);
+    function addAscii(text) {
+      const li = document.createElement("li");
+      const pre = document.createElement("pre");
+      pre.className = "ascii";
+      pre.textContent = text;
+      li.appendChild(pre);
+      historyEl.appendChild(li);
     }
 
-    function showStartup() {
-      startupMessages.forEach((msg, i) => delayMsg(msg, i * 500));
+    function bar(pct, width = 10) {
+      return "█".repeat(Math.round(pct / 100 * width)) +
+             "░".repeat(width - Math.round(pct / 100 * width));
     }
 
-    function navigate(option) {
-      if (routes[option]) {
-        window.location.href = routes[option];
-      } else {
-        const li = document.createElement("li");
-        li.textContent = "Ongeldige invoer. Kies 1 t/m 4.";
-        historyEl.appendChild(li);
-        scrollToBottom();
-      }
+    function cmd_status() {
+      addLine(`CPU: ${bar(72)} 72%`);
+      addLine(`RAM: ${bar(41)} 41%`);
     }
 
-    window.addEventListener("keyup", (e) => {
-      const key = e.key;
-      if (key === "Enter") {
-        if (currentText.toLowerCase() === "glitch") {
-          alertBox.classList.add("active");
+    function askLinkedInConfirm() {
+      addLine("Dit opent mijn LinkedIn-profiel.");
+      addLine("Voeg me gelijk toe als connectie als je toch een kijkje neemt.");
+      addLine('Typ "y" om door te gaan:');
+      pendingAction = "linkedin";
+    }
+
+    function runCommand(inputRaw) {
+      const input = inputRaw.trim().toLowerCase();
+      if (!input) return;
+
+      addLine(`> ${inputRaw}`);
+
+      if (pendingAction === "linkedin") {
+        if (input === "y") {
+          window.location.href = linkedinUrl;
         } else {
-          const li = document.createElement("li");
-          li.textContent = "> " + currentText;
-          historyEl.appendChild(li);
-          navigate(currentText.trim());
+          addLine("Geannuleerd.");
         }
-        currentText = "";
-      } else if (key === "Backspace") {
-        currentText = currentText.slice(0, -1);
-      } else if (key.length === 1) {
-        currentText += key;
+        pendingAction = null;
+        return;
       }
 
+      if (input === "status") return cmd_status();
+      if (input === "1") return window.location.href = routes["1"];
+      if (input === "2" || input === "linkedin") return askLinkedInConfirm();
+      if (input === "sgdc") return window.location.href = routes["sgdc"];
+      if (input === "glitch") return alertBox.classList.add("active");
+
+      addLine(`Command not found: ${inputRaw}`);
+      addLine(`Tip: status, 1, 2, sgdc`);
+    }
+
+    function render() {
       terminalText.textContent = currentText;
+    }
+
+    function submit() {
+      runCommand(currentText);
+      currentText = "";
+      render();
+    }
+
+    window.addEventListener("keydown", e => {
+      if (e.key === "Enter") submit();
+      else if (e.key === "Backspace") currentText = currentText.slice(0, -1);
+      else if (e.key.length === 1) currentText += e.key;
+      render();
     });
 
-    showStartup();
+    function boot() {
+      const bootLines = [
+        "Booting system...",
+        "Loading config...",
+        "Ready.",
+        "",
+        "Voer het nummer in van je keuze:",
+        "[1] Bekijk mijn portfolio",
+        "[2] Bekijk mijn LinkedIn",
+        "",
+        "> status"
+      ];
+
+      bootLines.forEach((l, i) =>
+        setTimeout(() => addLine(l), i * 300)
+      );
+
+      setTimeout(cmd_status, bootLines.length * 300 + 200);
+
+      setTimeout(() => addAscii(
+`██╗     ██╗   ██╗ ██████╗ █████╗ ███████╗     ██████╗ ███████╗
+██║     ██║   ██║██╔════╝██╔══██╗██╔════╝    ██╔═══██╗██╔════╝
+██║     ██║   ██║██║     ███████║███████╗    ██║   ██║███████╗
+██║     ██║   ██║██║     ██╔══██║╚════██║    ██║   ██║╚════██║
+███████╗╚██████╔╝╚██████╗██║  ██║███████║    ╚██████╔╝███████║
+╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝╚══════╝     ╚═════╝ ╚══════╝`), bootLines.length * 300 + 800);
+    }
+
+    boot();
+    render();
   </script>
 </body>
 </html>
