Add links to Lucas Kit repository and documentation

--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 
     const routes = {
       "portfolio": "https://lucasmangroelal.nl/portfolio",
+      "LUCAS_KIT REPO": "https://github.com/lucasenlucas/Lucas_Kit",
+      "LUCAS_KIT DOCUMENTATION": "https://lucasmangroelal.nl/lucas_kit",
       "linkedin": "https://nl.linkedin.com/in/lucas-mangroelal-4b458b348"
+      
     };
 
     // Tiny fake filesystem voor secret commands
